Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4801

spin lock contention in lock_res_and_lock

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • None
    • Lustre 2.4.1
    • lustre-2.4.0-26chaos
    • 3
    • 13209

      Our MDS experienced severe lock contention in lock_res_and_lock(). This had a large impact on client responsiveness because service threads were starved for CPU time. We have not yet identified the client workload that caused this problem. All active tasks had stack traces like this, but would eventually get scheduled out.

       ...
      __spin_lock
      lock_res_and_lock
      ldlm_handle_enqueue0
      mdt_handle_common
      mds_regular_handle
      ptlrpc_server_handle_request
      ...
      

      This raises the question of why the ldlm resource lock needs to be a spinlock. Couldn't we avoid this issue by converting it to a mutex? This question was raised in LU-3504.

            green Oleg Drokin
            nedbass Ned Bass (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: