LU-4801 ldlm: mutex lock for resource lock

This is experimental patch to see if replacing resource spinlock with
a mutex to see if this helps server side contention.

Change-Id: I05129f07d32914ce68c30416f71ab92a4c581c53
Signed-off-by: Oleg Drokin <oleg.drokin@intel.com>